updated readme for cli app